--- a/Clase 7/index.html
+++ b/Clase 7/index.html
@@ -9,47 +9,63 @@
 </head>
 <body>
     <header>
-        <img src="/Img/logo batman.png" alt="batman">
-        <h1> C U R R I C U L U M    V I T A E    D E    B R U C E    W A Y N E</h1>
+        <img src="/Clase 7/Img/logo batman.png" alt="batman">
+        <h1> CURRICULUM VITAE DE BRUCE WAYNE</h1>
     </header>
     <main>
         <section>
-            <h2>D A T O S   P E R S O N A L E S</h2>
+            <h2>DATOS PERSONALES</h2>
                 <ul>
                     <li>Nombre completo: <i>Bruce Wayne</i></li> 
                     <li>Fecha de nacimiento: <i>01/05/1939</i></li>
                     <li>Lugar de nacimiento: <i>Gotham City</i></li>
                 </ul>
         </section>
-        <section>    <h2>F O R M A C I Ó N   A C A D É M I C A</h2>
-                 <ul type="none">
+        <section>    <h2>FORMACIÓN ACADÉMICA</h2>
+                <ul type="none">
                     <li>1956-1961:
-                        <li>Universidad del espantapájaros</li>
-                        <li>Licenciatura en aeronaútica</li>
+                        <ul type="none">
+                            <li>Universidad del espantapájaros</li>
+                            <li>Licenciatura en aeronaútica</li>
+                        </ul>
                     </li>
-                    <li>1952-1956: 
-                        <li>Secundario Gotham</li>
-                        <li>Bachiller con especialización en trucos</li>
-                    </li>
+                    <li>1952-1956:
+                        <ul type="none">
+                            <li>Secundario Gotham</li>
+                            <li>Bachiller con especialización en trucos</li>
+                        </ul>
+                  </li>
                 </ul>
         </section>
         <section>
             <h2>E X P E R I E N C I A   L A B O R A L</h2>
-                <ul type="none">
-                    <li>1975-1985:
+            <ul type="none">
+                <li>1975-1985:
+                    <ul type="none">
                         <li>Desocupado</li>
-                        <li>Sin trabajo porquer se me rompió el batimovil</li>
-                    </li>
-                    <li>1952-1956: 
-                        <li>Secundario Gotham</li>
-                        <li>Bachiller con especialización en trucos</li>
-                    </li>
-                    <li>1952-1956: 
-                        <li>Secundario Gotham</li>
-                        <li>Bachiller con especialización en trucos</li>
-                    </li>
-                </ul>
+                        <li>Sin trabajo porque se me rompió el batimovil</li>
+                    </ul>
+                </li>
+                <li>1975-1985:
+                    <ul type="none">
+                        <li>Cazavillanos y demás chusma</li>
+                        <li>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
+                    </ul>
+                </li>
+                <li>1962-1965:
+                    <ul type="none">
+                        <li>Aprendiz de superhéroes</li>
+                        <li>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</li>
+                    </ul>
+                </li>
+            </ul>
     </section>
     </main>
+    <footer> 
+        <H3>0810-BATMAN</H3>
+        <img src="Img/ico_instagram.png""="ico instagram">
+        <img src="Img/ico_linkedin.png""="ico linkedin">
+    </footer>
+
 </body>
 </html>
