--- a/Clase 7/index.html
+++ b/Clase 7/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <header>
-        <img src="/Clase 7/Img/logo batman.png" alt="batman">
+        <div class="batman"><img src="/Clase 7/Img/logo batman.png" alt="batman"></div>
         <h1> CURRICULUM VITAE DE BRUCE WAYNE</h1>
     </header>
     <main>
         <section>
-            <h2>DATOS PERSONALES</h2>
-                <ul>
+            <h2 class="titulos">DATOS PERSONALES</h2>
+                <ul class="datos">
                     <li>Nombre completo: <i>Bruce Wayne</i></li> 
                     <li>Fecha de nacimiento: <i>01/05/1939</i></li>
                     <li>Lugar de nacimiento: <i>Gotham City</i></li>
                 </ul>
         </section>
-        <section>    <h2>FORMACIÓN ACADÉMICA</h2>
+        <section>    
+            <h2 class="titulos">FORMACIÓN ACADÉMICA</h2>
                 <ul type="none">
                     <li>1956-1961:
                         <ul type="none">
@@ -29,6 +30,7 @@
                             <li>Licenciatura en aeronaútica</li>
                         </ul>
                     </li>
+                    <br>
                     <li>1952-1956:
                         <ul type="none">
                             <li>Secundario Gotham</li>
@@ -38,7 +40,7 @@
                 </ul>
         </section>
         <section>
-            <h2>E X P E R I E N C I A   L A B O R A L</h2>
+            <h2 class="titulos">EXPERIENCIA LABORAL</h2>
             <ul type="none">
                 <li>1975-1985:
                     <ul type="none">
@@ -46,12 +48,14 @@
                         <li>Sin trabajo porque se me rompió el batimovil</li>
                     </ul>
                 </li>
+                <br>
                 <li>1975-1985:
                     <ul type="none">
                         <li>Cazavillanos y demás chusma</li>
                         <li>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
                     </ul>
                 </li>
+                <br>
                 <li>1962-1965:
                     <ul type="none">
                         <li>Aprendiz de superhéroes</li>
