--- a/Clase 7/index.html
+++ b/Clase 7/index.html
@@ -16,22 +16,22 @@
         <section>
             <h2 class="titulos">DATOS PERSONALES</h2>
                 <ul class="datos">
-                    <li>Nombre completo: <i>Bruce Wayne</i></li> 
-                    <li>Fecha de nacimiento: <i>01/05/1939</i></li>
-                    <li>Lugar de nacimiento: <i>Gotham City</i></li>
+                    <li><i>Nombre completo:</i> Bruce Wayne</li> 
+                    <li><i>Fecha de nacimiento:</i> 01/05/1939</li>
+                    <li><i>Lugar de nacimiento:</i> Gotham City</li>
                 </ul>
         </section>
         <section>    
             <h2 class="titulos">FORMACIÓN ACADÉMICA</h2>
                 <ul type="none">
-                    <li>1956-1961:
+                    <li><p class="fechas">1956-1961:</p>
                         <ul type="none">
                             <li>Universidad del espantapájaros</li>
                             <li>Licenciatura en aeronaútica</li>
                         </ul>
                     </li>
                     <br>
-                    <li>1952-1956:
+                    <li><p class="fechas">1952-1956:</p>
                         <ul type="none">
                             <li>Secundario Gotham</li>
                             <li>Bachiller con especialización en trucos</li>
@@ -42,21 +42,21 @@
         <section>
             <h2 class="titulos">EXPERIENCIA LABORAL</h2>
             <ul type="none">
-                <li>1975-1985:
+                <li><p class="fechas">1975-1985:</p>
                     <ul type="none">
                         <li>Desocupado</li>
                         <li>Sin trabajo porque se me rompió el batimovil</li>
                     </ul>
                 </li>
                 <br>
-                <li>1975-1985:
+                <li><p class="fechas">1975-1985:</p>
                     <ul type="none">
                         <li>Cazavillanos y demás chusma</li>
                         <li>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
                     </ul>
                 </li>
                 <br>
-                <li>1962-1965:
+                <li><p class="fechas">1962-1965:</p>
                     <ul type="none">
                         <li>Aprendiz de superhéroes</li>
                         <li>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</li>
