--- a/Clase 7/index.html
+++ b/Clase 7/index.html
@@ -67,9 +67,8 @@
     </main>
     <footer> 
         <H3>0810-BATMAN</H3>
-        <img src="Img/ico_instagram.png""="ico instagram">
-        <img src="Img/ico_linkedin.png""="ico linkedin">
+        <span><p class="instagram"><img src="Img/ico_instagram.png" alt="ico instagram"></p></span>
+        <span><p class="linkedin"><img src="Img/ico_linkedin.png" alt="ico linkedin"></p></span>
     </footer>
-
 </body>
 </html>
