--- a/Clase 10/index.html
+++ b/Clase 10/index.html
@@ -10,7 +10,7 @@
 <body>
         
     <header> 
-        <div class="cabecera">descuentos 20%</div>
+        <div class="cabecera">Descuentos 20%</div>
         <h1>Heroes</h1>
     </header>
     <main>
@@ -19,19 +19,25 @@
             <img class="cara1"src="/img/cara batman.jpg" alt="cara batman">
             <h2>BATMAN</h2>
             <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+            <p class="ver_más_1">Ver más</p>
         </div>
         <div class="caja2">
             <img src="/img/fondo mina.jpg" alt="carta mina">
             <img class="cara2" src="/img/cara mina.jpg" alt="cara batman">
             <h2>Harley Quinn</h2>
             <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
+            <p class="ver_más_2">Ver más</p>
         </div>
         <div class="caja3">
             <img src="/img/batman.jpg" alt="carta batman">
             <img class="cara3"src="/img/cara batman.jpg" alt="cara batman">
             <h2>BATMAN</h2>
             <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+            <p class="ver_más_3">Ver más</p>
         </div>
-</main>
+    </main>
+    <footer>
+        <div> Todos los derechos reservados a FRONT END 1</div>
+    </footer>
 </body>
 </html>
