--- a/Clase 10/index.html
+++ b/Clase 10/index.html
@@ -15,26 +15,29 @@
         <h1>Heroes</h1>
     </header>
     <main>
-        <div class="caja1">
+        <div class="caja">
             <img src="/img/batman.jpg" alt="carta batman">
-            <img class="cara1"src="/img/cara batman.jpg" alt="cara batman">
+            <img class="megusta"src="/img/vector.png" alt="megusta">
+            <img class="cara"src="/img/cara batman.jpg" alt="cara batman">
             <h2>BATMAN</h2>
             <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
-            <p class="ver_más_1">Ver más</p>
+            <p class="ver_más">Ver más</p>
         </div>
-        <div class="caja2">
+        <div class="caja">
             <img src="/img/fondo mina.jpg" alt="carta mina">
-            <img class="cara2" src="/img/cara mina.jpg" alt="cara batman">
+            <img class="megusta"src="/img/vector.png" alt="megusta">
+            <img class="cara" src="/img/cara mina.jpg" alt="cara batman">
             <h2>Harley Quinn</h2>
             <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
-            <p class="ver_más_2">Ver más</p>
+            <p class="ver_más">Ver más</p>
         </div>
-        <div class="caja3">
+        <div class="caja">
             <img src="/img/batman.jpg" alt="carta batman">
-            <img class="cara3"src="/img/cara batman.jpg" alt="cara batman">
+            <img class="megusta"src="/img/vector.png" alt="megusta">
+            <img class="cara"src="/img/cara batman.jpg" alt="cara batman">
             <h2>BATMAN</h2>
             <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
-            <p class="ver_más_3">Ver más</p>
+            <p class="ver_más">Ver más</p>
         </div>
     </main>
     <footer>
